# ssmports

./: .gitignore  README.md  build.bat  gui.py  nonexistent.json  pyproject.toml  sessions.json.example  ssmports.spec
src/: aws_sessions.py  checker.py  config_loader.py  ecs_id_resolver.py  exceptions.py  forwarder.py  session.py
tests/: test_config_loader.py  test_ecs_id_resolver.py  test_forwarder.py  test_session.py
