[project]
name = "ssmports"
version = "0.4.0"
description = "Port forwarding over SSM connection manager"
authors = [
    {name = "Mark Otting",email = "mark@otict.nl"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3 (>=1.42.14,<2.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "jsonschema (>=4.25.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
